Fix compilation errors: replace List.of() with Collections.emptyList() for Java 8 compat, add getFareRule()/setFareRule() aliases to Line.java